# datawarehouse_agent

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  Makefile  README.md  app.py  project_card.md  pyproject.toml
data/: stations.csv
db/tables/dims/: dimdatum.sql  dimdienstregelpunt.sql  dimlocatietype.sql  dimmeldingssoort.sql  dimtijd.sql  dimtreinnummer_treinserie.sql
db/tables/facts/: factincidentmkns.sql
docs/: tools.md
notebooks/: 01-setup.ipynb  02-rag.ipynb
src/agent/: agent.py  app.py  cli.py  llm.py  main.py  models.py  refinement_agent.py  sql_agent.py  tools.py  utils.py
src/agent/evals/: README.md  align.py  align_judges.py  alignment_refinement_20260621_115201.csv  alignment_sql_20260621_115201.csv  app.py  evals.py  feedback.json  human_labels.json  judge_results.json  judges.py  label_evals.py  labels.json  questions_manual.csv  refinement_judge.py  results.json  run.py  run_evals.py  run_judge.py  run_questions.py
src/agent/evals/data/: questions_sql.csv  results.json  user_feedback.json
src/agent/evals/datasets/: questions_generated.csv  (+2 more)
src/agent/tests/: README.md  conftest.py  cost_tracker.py  judge.py  test_agent.py  test_judge.py  test_refinement_agent.py  test_sql_agent.py  utils.py
src/db/: seed_dimdatum.py  seed_dimdienstregelpunt.py  seed_dimlocatietype.py  seed_dimmeldingssoort.py  seed_dimtijd.py  seed_dimtreinnummer_treinserie.py  seed_factincidentmkns.py  setup_db.py  utils.py
src/new_agent/: test.ipynb
src/react_agent/: __init__.py  clarifier_agent.py  main.py  models.py  sql_agent.py  tools.py
(+2 files in other folders)
